# tessitura

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml.example  rustfmt.toml
.github/workflows/: ci.yml
config/: taxonomy.toml
crates/design/: Cargo.toml  README.md  lib.rs
crates/design/dev/: 0001-phase-1-plan-core-data-model-scan-identify.md  0002-phase-2-plan-enrichment-harmonization-review.md
crates/design/docs/: index.md
crates/design/docs/06-final/: 0001-tessitura-project-plan.md
crates/tessitura-cli/: Cargo.toml
crates/tessitura-cli/src/: main.rs
crates/tessitura-cli/src/commands/: config.rs  enrich.rs  fingerprint.rs  harmonize.rs  identify.rs  mod.rs  process.rs  review.rs  rules.rs  scan.rs  status.rs  vocab.rs
crates/tessitura-cli/src/tui/: album_list.rs  mod.rs  track_detail.rs
crates/tessitura-core/: Cargo.toml
crates/tessitura-core/src/: error.rs  lib.rs  provenance.rs
crates/tessitura-core/src/model/: artist.rs  expression.rs  ids.rs  item.rs  manifestation.rs  mod.rs  work.rs
crates/tessitura-core/src/schema/: db.rs  migrations.rs  mod.rs
crates/tessitura-core/src/taxonomy/: form.rs  genre.rs  instrumentation.rs  mod.rs  period.rs  rules.rs
crates/tessitura-etl/: Cargo.toml
crates/tessitura-etl/src/: acoustid.rs  config.rs  error.rs  harmonize.rs  identify.rs  lib.rs  musicbrainz.rs  pipeline.rs  scan.rs  work_item.rs
crates/tessitura-etl/src/audio/: decoder.rs  fingerprint.rs  mod.rs
crates/tessitura-etl/src/enrich/: discogs.rs  lastfm.rs  lcgft.rs  mod.rs  musicbrainz.rs  resilience.rs  stage.rs  wikidata.rs
crates/tessitura-etl/tests/: integration_test.rs
crates/tessitura-graph/: Cargo.toml
crates/tessitura-graph/src/: lib.rs
crates/tessitura-search/: Cargo.toml
crates/tessitura-search/src/: lib.rs
docs/: configuration.md
src/: lib.rs
