# Tessitura Workspace

[workspace]
resolver = "2"
members = [
    "crates/tessitura-core",
    "crates/tessitura-etl",
    "crates/tessitura-graph",
    "crates/tessitura-search",
    "crates/tessitura-cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/oxur/tessitura"
homepage = "https://github.com/oxur/tessitura"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
log = "0.4"
twyg = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Domain
treadle = "0.2"
rusqlite = { version = "0.38", features = ["bundled"] }
lofty = "0.22"
petgraph = "0.7"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
dirs = "6"
confyg = "0.3"

# Resilience
backon = "1"

# Internal crates
tessitura-core = { path = "crates/tessitura-core" }
tessitura-etl = { path = "crates/tessitura-etl" }
tessitura-graph = { path = "crates/tessitura-graph" }
tessitura-search = { path = "crates/tessitura-search" }

# Dev
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow these common pedantic triggers:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
