# Tessitura Workspace

[workspace]
resolver = "2"
members = [
    "crates/tessitura-core",
    "crates/tessitura-etl",
    "crates/tessitura-graph",
    "crates/tessitura-search",
    "crates/tessitura-cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/oxur/tessitura"
homepage = "https://github.com/oxur/tessitura"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
log = "0.4"
twyg = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Domain
treadle = "0.2"
rusqlite = { version = "0.38", features = ["bundled"] }
lofty = "0.22"
petgraph = "0.7"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
dirs = "6"
confyg = "0.3"
toml_edit = "0.22"

# Resilience
backon = "1"

# Internal crates
tessitura-core = { path = "crates/tessitura-core" }
tessitura-etl = { path = "crates/tessitura-etl" }
tessitura-graph = { path = "crates/tessitura-graph" }
tessitura-search = { path = "crates/tessitura-search" }

# Dev
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow these common pedantic triggers:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"  # Internal workspace crates don't need full metadata
uninlined_format_args = "allow"  # Explicit format args are sometimes clearer
unused_async = "allow"  # Functions may be async for future-proofing
map_unwrap_or = "allow"  # map + unwrap_or is sometimes clearer than map_or
unnecessary_literal_bound = "allow"  # Trait method signatures may require specific lifetimes
needless_raw_string_hashes = "allow"  # Raw string hash count depends on content, not always reducible
multiple_crate_versions = "allow"  # Dependency resolution may require multiple versions
redundant_closure_for_method_calls = "allow"  # Sometimes closures are clearer than direct method references
cast_possible_wrap = "allow"  # Database values are within valid ranges
doc_markdown = "allow"  # Backticks in docs are stylistic, not always necessary
needless_borrow = "allow"  # Sometimes explicit borrows are clearer
explicit_auto_deref = "allow"  # Explicit derefs can be clearer
implicit_clone = "allow"  # to_string() on &str is idiomatic
needless_pass_by_value = "allow"  # Taking ownership is sometimes intentional for API design
unnecessary_wraps = "allow"  # Return types may need Result for consistency or future-proofing
