[package]
name = "tessitura-core"
version = "0.1.0"
description = "Core domain model and schema for tessitura"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
